# cpp-common-tools

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  appveyor.yml  array_size.h  common-tools.h  config.in  config.in.h  platform.h  readme.md  strings.h
docs/: doxyfile.in
platform/: file_functions.cpp  file_functions.h  handle.hpp  performance_counter.h  platform.h  thread_functions.cpp  thread_functions.h
strings/: formatter.cpp  formatter.h  sinks.h  string_functions.cpp  string_functions.h  string_template.cpp  string_template.h
tests/: CMakeLists.txt
tests/catch/: catch.hpp
tests/platform/: config.in  config.in.h  file_functions.tests.cpp  performance_counter.tests.cpp  platform_headers.tests.cpp  thread_functions.tests.cpp
tests/strings/: formatter.tests.cpp  string_functions.tests.cpp
tests/utility/: event_test.tests.cpp
utility/: event_test.h
